--- a/sass/components/_features-section.scss
+++ b/sass/components/_features-section.scss
@@ -1,35 +1,54 @@
 .features {
-    padding-bottom: 0;
-  }
-  .features-list {
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    gap: 30px;
-  }
+  padding-bottom: 0;
+}
+.features-list {
+  flex-wrap: wrap;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  gap: 30px;
+}
+.features-list__item {
+  width: 100%;
   
-  .features__link {
-    width: 270px;
-    height: 120px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--background-color-team);
+  @media screen and (min-width: 768px)  {
+    width: calc((100% - 30px) / 2); 
   }
+  @media screen and (min-width: 1200px)  {
+    width: calc((100% - 90px) / 4);
+  }
+}
+
+.features__link {
+  width: 100%;
+  height: 120px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--background-color-team);
+}
+
+.features-list__title {
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--title-text-color);
+  margin-top: 30px;
+  margin-bottom: 10px;
+  text-align: center;
   
-  .features-list__title {
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--title-text-color);
-    margin-top: 30px;
-    margin-bottom: 10px;
+  @media screen and (min-width: 768px)  {
+    text-align: start;
   }
-  .features-list__text {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    color: var(--primary-text-color);
+  @media screen and (min-width: 1200px)  {
+    text-align: start;
   }
+}
+.features-list__text {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+}
