--- a/sass/components/_clients-section.scss
+++ b/sass/components/_clients-section.scss
@@ -1,47 +1,59 @@
 .clients-title {
-    text-align: center;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 42px;
-    letter-spacing: 0.03em;
+  text-align: center;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 42px;
+  letter-spacing: 0.03em;
+  margin-bottom: 30px;
+  color: var(--title-text-color);
+
+  @media screen and (min-width: 1200px) {
     margin-bottom: 50px;
-    color: var(--title-text-color);
   }
-  .clients-box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .clients-list {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 30px;
-  }
-  .clients-item {
-    width: 170px;
+}
+.clients-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.clients-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+.clients-item {
+  width: calc((100% - 60px) / 2);
+
+  @include tablet{
+    width: calc((100% - 90px) / 3);
+    min-width: 226px;
     height: 92px;
   }
-  .clients-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    color: #afb1b8;
-    border: 1px solid #afb1b8;
-    border-radius: 4px;
-    transition: border 250ms var(--timing-function), color 250ms var(--timing-function);
-    &:hover,
-    &:focus {
-      border: 1px solid var(--accent-color);
-      color: var(--accent-color);
-    }
+  @include desktop {
+    width: calc((100% - 150px) / 6);
+    min-width: 170px;
+    height: 92px;
   }
-  .clients-link-icon {
-    fill: currentColor;
+}
+.clients-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  color: #afb1b8;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  transition: border 250ms var(--timing-function), color 250ms var(--timing-function);
+  &:hover,
+  &:focus {
+    border: 1px solid var(--accent-color);
+    color: var(--accent-color);
   }
-  
- 
+}
+.clients-link-icon {
+  fill: currentColor;
+}
