--- a/sass/components/_common.scss
+++ b/sass/components/_common.scss
@@ -12,29 +12,34 @@
   padding: 0px 15px;
   margin: 0 auto;
 
-  @media screen and (min-width: 480px) {
-    max-width: 480px;
+  @include mobile {
+    width: 480px;
   }
-  @media screen and (min-width: 768px) {
-    max-width: 768px;
+  @include tablet{
+    width: 768px;
   }
-  @media screen and (min-width: 1200px) {
-    max-width: 1200px;
+  @include desktop {
+    width: 1200px;
   }
 }
+ 
+
+
 .section {
   padding-top: 60px;
   padding-bottom: 60px;
 
-  @media screen and (min-width: 768px) {
+  @include tablet{
     padding-top: 60px;
     padding-bottom: 60px;
   }
-  @media screen and (min-width: 1200px) {
+  @include desktop {
     padding-top: 94px;
     padding-bottom: 94px;
   }
 }
+ 
+
 
 .logo__part--dark {
   color: var(--logo-black-color);
