--- a/sass/components/_features-section.scss
+++ b/sass/components/_features-section.scss
@@ -1,6 +1,3 @@
-.features {
-  padding-bottom: 0;
-}
 .features-list {
   flex-wrap: wrap;
   display: flex;
@@ -10,11 +7,11 @@
 }
 .features-list__item {
   width: 100%;
-  
-  @media screen and (min-width: 768px)  {
-    width: calc((100% - 30px) / 2); 
+
+  @include tablet {
+    width: calc((100% - 30px) / 2);
   }
-  @media screen and (min-width: 1200px)  {
+  @include desktop {
     width: calc((100% - 90px) / 4);
   }
 }
@@ -37,11 +34,11 @@
   margin-top: 30px;
   margin-bottom: 10px;
   text-align: center;
-  
-  @media screen and (min-width: 768px)  {
+
+  @include tablet {
     text-align: start;
   }
-  @media screen and (min-width: 1200px)  {
+  @include desktop {
     text-align: start;
   }
 }
