--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,27 +1,64 @@
+.hero-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0;
+  width: 100%;
+}
 .hero {
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding: 118px 60px;
   text-align: center;
-  max-width: 1600px;
-  height: 600px;
+  width: 100%;
+  height: 100%;
   margin: 0 auto;
   background-color: var(--background-color-footer);
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(../images/hero-bg.jpg);
+  background-image: var(--bg-gradient), url(../images/hero-bg-mob.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  @include retina {
+    background-image: var(--bg-gradient), url(../images/hero-bg-mob-2x.jpg);
+  }
+  @include tablet {
+    padding: 118px 204px;
+    background-image: var(--bg-gradient), url(../images/hero-bg-tabl.jpg);
+
+    @include retina {
+      background-image: var(--bg-gradient), url(../images/hero-bg-tabl-2x.jpg);
+    }
+  }
+  @include desktop {
+    padding: 200px 452px;
+    background-image: var(--bg-gradient), url(../images/hero-bg.jpg);
+
+    @include retina {
+      background-image: var(--bg-gradient), url(../images/hero-bg-2x.jpg);
+    }
+  }
 }
 .hero__title {
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 14px;
+  line-height: calc(26px / 14px);
   letter-spacing: 0.06em;
   text-align: center;
   text-transform: uppercase;
   display: inline-block;
-  width: 696px;
+  max-width: 360px;
   color: var(--white-primary-color);
+  @include mobile {
+    font-size: 26px;
+    line-height: calc(42px / 26px);
+  }
+  @include tablet {
+    font-size: 26px;
+    line-height: calc(42px / 26px);
+  }
+  @include desktop {
+    font-size: 44px;
+    line-height: calc(60px / 44px);
+    min-width: 696px;
+  }
 }
 
 .hero__btn {
@@ -31,11 +68,12 @@
   font-family: inherit;
   margin: 0 auto;
   margin-top: 30px;
-  padding: 10px 32px;
-  min-width: 216px;
+  padding: 10px 24px;
+  min-width: 200px;
+  height: 50px;
   font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
+  font-size: 14px;
+  line-height: calc(30px / 16px);
   letter-spacing: 0.06em;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   color: var(--white-primary-color);
@@ -44,5 +82,13 @@
   &:hover,
   &:focus {
     background-color: #409be6;
+  }
+
+  @include tablet {
+    padding: 10px 24px;
+    font-size: 16px;
+  }
+  @include desktop {
+    padding: 10px 32px;
   }
 }
