--- a/sass/components/_team-section.scss
+++ b/sass/components/_team-section.scss
@@ -1,76 +1,87 @@
 .team {
-    background-color: var(--background-color-team);
-  }
-  .team__title {
-    text-align: center;
-    font-weight: 700;
+  background-color: var(--background-color-team);
+}
+.team__title {
+  text-align: center;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: calc(33px / 28px);
+  letter-spacing: 0.03em;
+  margin-bottom: 50px;
+  color: var(--title-text-color);
+  
+  @include desktop {
     font-size: 36px;
-    line-height: 1.16;
-    letter-spacing: 0.03em;
-    margin-bottom: 50px;
-    color: var(--title-text-color);
+    line-height: calc(42px / 36px);
   }
-  
-  .cards {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 30px;
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 30px;
+}
+
+.cards__item {
+  background: var(--white-primary-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+
+  width: 100%;
+  @include tablet {
+    width: calc((100% - 30px) / 2);
   }
-  
-  .cards__item {
-    background: var(--white-primary-color);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-      0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
+  @include desktop {
+    width: calc((100% - 90px) / 4);
   }
-  
-  .cards-content {
-    text-align: center;
-    padding-top: 30px;
-    padding-bottom: 30px;
+}
+
+.cards-content {
+  text-align: center;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.cards-content__name {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-bottom: 10px;
+  color: var(--title-text-color);
+}
+.cards-content__position {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.18;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-bottom: 16px;
+  color: var(--primary-text-color);
+}
+
+.socials {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.socials__link {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  fill: #afb1b8;
+  transition: background-color 250ms var(--timing-function), fill 250ms var(--timing-function);
+  &:hover,
+  &:focus {
+    background-color: #2196f3;
+    fill: var(--white-primary-color);
   }
-  
-  .cards-content__name {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.18;
-    text-align: center;
-    letter-spacing: 0.03em;
-    margin-bottom: 10px;
-    color: var(--title-text-color);
-  }
-  .cards-content__position {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.18;
-    text-align: center;
-    letter-spacing: 0.03em;
-    margin-bottom: 16px;
-    color: var(--primary-text-color);
-  }
-  
-  .socials {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-  }
-  
-  .socials__link {
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
-    background-color: transparent;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    fill: #afb1b8;
-    transition: background-color 250ms var(--timing-function), fill 250ms var(--timing-function);
-    &:hover,
-    &:focus {
-      background-color: #2196f3;
-      fill: var(--white-primary-color);
-    }
-  }
-  
- 
+}
