--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 @import './utils/variables';
 @import './utils/visually-hidden';
 @import './utils/reset';
+@import './utils/mixin';
 
 @import './components/common';
 @import './components/page-header';
