--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -11,6 +11,8 @@
     --header-background-color: #ececec;
     --background-btn-color: #188ce8;
     --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    --bg-gradient: linear-gradient(rgba(47, 48, 58, 0.4), 
+    rgba(47, 48, 58, 0.4));
   }
   
   /* Fonts */
