--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -6,10 +6,10 @@
   width: 100%;
 }
 .hero {
-  padding: 118px 60px;
+  padding: 118px 0;
   text-align: center;
-  width: 100%;
-  height: 100%;
+  max-width: 1600px;
+  height: 400px;
   margin: 0 auto;
   background-color: var(--background-color-footer);
   background-image: var(--bg-gradient), url(../images/hero-bg-mob.jpg);
@@ -20,7 +20,9 @@
     background-image: var(--bg-gradient), url(../images/hero-bg-mob-2x.jpg);
   }
   @include tablet {
-    padding: 118px 204px;
+    max-width: 1600px;
+    height: 400px;
+    padding: 118px 0;
     background-image: var(--bg-gradient), url(../images/hero-bg-tabl.jpg);
 
     @include retina {
@@ -28,7 +30,9 @@
     }
   }
   @include desktop {
-    padding: 200px 452px;
+    max-width: 1600px;
+    height: 600px;
+    padding: 200px 0;
     background-image: var(--bg-gradient), url(../images/hero-bg.jpg);
 
     @include retina {
@@ -38,18 +42,15 @@
 }
 .hero__title {
   font-weight: 900;
-  font-size: 14px;
-  line-height: calc(26px / 14px);
+  font-size: 26px;
+  line-height: calc(42px / 26px);
   letter-spacing: 0.06em;
   text-align: center;
   text-transform: uppercase;
   display: inline-block;
   max-width: 360px;
   color: var(--white-primary-color);
-  @include mobile {
-    font-size: 26px;
-    line-height: calc(42px / 26px);
-  }
+
   @include tablet {
     font-size: 26px;
     line-height: calc(42px / 26px);
