--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -39,21 +39,43 @@
   }
 }
 
-.site-list .link.current {
-  color: var(--accent-color);
-  &::after {
-    content: '';
-    position: absolute;
-    display: block;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 4px;
-    background-size: cover;
-    background-color: var(--accent-color);
-    border-radius: 2px;
-    transform: scaleX(1);
-    transition: 250ms var(--timing-function);
+.site-list__item.current {
+  &:hover,
+    &:focus {
+      color: var(--accent-color);
+    }
+  @include tablet {
+    &::after {
+      content: '';
+      position: absolute;
+      display: block;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      height: 4px;
+      background-size: cover;
+      background-color: var(--accent-color);
+      border-radius: 2px;
+      transform: scaleX(1);
+      transition: 250ms var(--timing-function);
+    }
+
+    @include desktop {
+      &::after {
+        content: '';
+        position: absolute;
+        display: block;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        height: 4px;
+        background-size: cover;
+        background-color: var(--accent-color);
+        border-radius: 2px;
+        transform: scaleX(1);
+        transition: 250ms var(--timing-function);
+      }
+    }
   }
 }
 
@@ -64,17 +86,23 @@
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  padding: 32px 0 32px 0;
   color: var(--title-text-color);
   transition: color 250ms var(--timing-function);
   &:hover,
   &:focus {
     color: var(--accent-color);
   }
+  @include tablet {
+    padding: 32px 0 41px 0;
+
+  }
+  @include desktop {
+    padding: 32px 0 32px 0;
+  }
 }
 
 .connect {
-    display: none;
+  display: none;
   @include tablet {
     display: flex;
     flex-direction: column;
@@ -172,7 +200,7 @@
   fill: currentColor;
 }
 .mob-menu__list {
-  margin-bottom: 302px;
+  margin-bottom: auto;
   @include tablet {
     display: flex;
     display: none;
@@ -232,6 +260,7 @@
 }
 .mob-soc-menu {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
 }
